--- a/EE3206_WPF/Components/LandingPageButton.xaml
+++ b/EE3206_WPF/Components/LandingPageButton.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="EE3206_WPF.Components.SmallButton"
+﻿<UserControl x:Class="EE3206_WPF.Components.LandingPageButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EE3206_WPF.Components"
              mc:Ignorable="d" 
-             x:Name="SmallIcon"
-             d:DesignHeight="100" d:DesignWidth="60">
+             x:Name="LandingButton"
+             d:DesignHeight="325" d:DesignWidth="250">
     <UserControl.Resources>
         <Style x:Key="FocusVisual1">
             <Setter Property="Control.Template">
@@ -18,7 +18,7 @@
             </Setter>
         </Style>
         <SolidColorBrush x:Key="Button.Static.Background1" Color="#FFDDDDDD"/>
-        <SolidColorBrush x:Key="Button.Static.Border1" Color="#FF707070"/>
+        <SolidColorBrush x:Key="Button.Static.Border1" Color="White"/>
         <SolidColorBrush x:Key="Button.MouseOver.Background1" Color="#FFBEE6FD"/>
         <SolidColorBrush x:Key="Button.MouseOver.Border1" Color="#FF3C7FB1"/>
         <SolidColorBrush x:Key="Button.Pressed.Background1" Color="#FFC4E5F6"/>
@@ -31,14 +31,14 @@
             <Setter Property="Background" Value="{StaticResource Button.Static.Background1}"/>
             <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border1}"/>
             <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
-            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="BorderThickness" Value="2"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="Padding" Value="1"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border CornerRadius="20" x:Name="border" Background="#804bf5" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
+                        <Border  CornerRadius="20" x:Name="border" Background="#804bf5" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
                             <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -64,18 +64,23 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
+    <Border Height="325" Width="250" Background="#804bf5" CornerRadius="18" >
+        <Grid  Height="325" Width="250" >
+            <Grid.RowDefinitions>
 
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="620"/>
+                <RowDefinition Height="250"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="*"/>
 
-        </Grid.RowDefinitions>
-        <Button Grid.Row="0"  Style="{DynamicResource Right_btn}">
-            <ContentControl  Content="{Binding Icon,ElementName=SmallIcon}"></ContentControl>
-            <!--<Path Fill="White" Height="50" Width="50" Data="{StaticResource logout}"/>-->
-        </Button>
-        <ContentControl  FontSize="12" Foreground="White" HorizontalAlignment="Center" Grid.Row="1" Content="{Binding IconTitle,ElementName=SmallIcon}" Width="60" Margin="0,0,0,585"/>
+            </Grid.RowDefinitions>
+            <Button Grid.Row="0"  Style="{DynamicResource Right_btn}" Margin="10,10,10,10">
+                <ContentControl Content="{Binding Icon,ElementName=LandingButton}"></ContentControl>
 
-    </Grid>
+
+                <!--<Path Fill="White" Height="50" Width="50" Data="{StaticResource logout}"/>-->
+            </Button>
+            <ContentControl FontSize="38" Foreground="White" HorizontalAlignment="Center" Grid.Row="1" Content="{Binding IconTitle,ElementName=LandingButton}" Width="230"/>
+
+        </Grid>
+    </Border>
 </UserControl>
