--- a/EE3206_WPF/Pages/AdminDashBoard/AdminDashBoard.xaml
+++ b/EE3206_WPF/Pages/AdminDashBoard/AdminDashBoard.xaml
@@ -37,7 +37,7 @@
             </components:LandingPageButton.IconTitle>
         </components:LandingPageButton>
 
-        <components:LandingPageButton  NavUri="/Page/testpage/Page1.xaml"  Grid.Row="0" Grid.Column="1">
+        <components:LandingPageButton  NavClick="NavClick_User"  NavUri="/Pages/AdminList/AdminList.xaml"  Grid.Row="0" Grid.Column="1">
             <components:LandingPageButton.Icon>
                 <Path Fill="White" Height="80" Width="80" Data="{StaticResource Admin}"/>
             </components:LandingPageButton.Icon>
