--- a/EE3206_WPF/Components/PopUpWindow.xaml
+++ b/EE3206_WPF/Components/PopUpWindow.xaml
@@ -66,7 +66,7 @@
 
                PopupAnimation="Fade"
            >
-        <Border Background="WhiteSmoke" CornerRadius="12" Height="200" Width="450">
+        <Border BorderThickness="1" BorderBrush="Black"  Background="WhiteSmoke" CornerRadius="12" Height="200" Width="450">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
