--- a/EE3206_WPF/Pages/AdminList/AdminList.xaml
+++ b/EE3206_WPF/Pages/AdminList/AdminList.xaml
@@ -9,16 +9,50 @@
       Title="AdminList"
       x:Name="AdminList_view"
       xmlns:components1="clr-namespace:EE3206_WPF.Components">
+    <Page.Resources>
+        <!--<Style TargetType="{x:Type ListBoxItem}">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
+            <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
+            <Setter Property="Padding" Value="2,0,0,0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                        <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
+                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}"/>
+                            </Trigger>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="IsSelected" Value="true"/>
+                                    <Condition Property="Selector.IsSelectionActive" Value="false"/>
+                                </MultiTrigger.Conditions>
+                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightTextBrushKey}}"/>
+                            </MultiTrigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>-->
+    </Page.Resources>
     <Grid  Background="#262537">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="280"/>
+            <ColumnDefinition Width="400"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <components1:BrowseBackButton BackButton="BrowseBackButton_BackButton" Margin="-42,-313,42,313"></components1:BrowseBackButton>
+        <components1:BrowseBackButton BackButton="BrowseBackButton_BackButton" Margin="-101,-287,101,287"></components1:BrowseBackButton>
         <ListBox BorderThickness="1,0,0,0" Grid.Column="1" Name="listdata" Background="Transparent">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <components1:UsersDetail Width="800" Username="{Binding Name}" Email="{Binding Email}" TelephoneNum="{Binding TelNum}" IdValue="{Binding ID}" />
+                    <components1:UsersDetail DeleteButton="UsersDetail_DeleteButton" Width="800" Username="{Binding Name}" Email="{Binding Email}" TelephoneNum="{Binding TelNum}" IdValue="{Binding ID}" />
                     <!--<Border Margin="0,6,0,6" Width="800" Height="150" Background="#393352" CornerRadius="18">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -57,5 +91,8 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <components1:PopUpWindow CloseEnv="popwindow_CloseEnv"  Width="450" Height="200"  VerticalAlignment="Center" x:Name="popwindow" Grid.Column="1" >
+
+        </components1:PopUpWindow>
     </Grid>
 </Page>
