--- a/EE3206_WPF/Pages/AdminList/AdminList.xaml
+++ b/EE3206_WPF/Pages/AdminList/AdminList.xaml
@@ -10,38 +10,235 @@
       x:Name="AdminList_view"
       xmlns:components1="clr-namespace:EE3206_WPF.Components">
     <Page.Resources>
-        <!--<Style TargetType="{x:Type ListBoxItem}">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-            <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-            <Setter Property="Padding" Value="2,0,0,0"/>
+
+        <!--Control colors.-->
+
+<Color x:Key="DisabledForegroundColor">#FF888888</Color>
+
+
+<Color x:Key="ControlLightColor">White</Color>
+<Color x:Key="ControlMediumColor">#FF7381F9</Color>
+
+<Color x:Key="ControlPressedColor">#FF211AA9</Color>
+
+
+<Color x:Key="GlyphColor">#FF444444</Color>
+
+
+<!--Border colors-->
+<Color x:Key="BorderLightColor">#FFCCCCCC</Color>
+<Color x:Key="BorderDarkColor">#FF444444</Color>
+
+
+<!--Control-specific resources.-->
+
+        <Style x:Key="ScrollBarLineButton"
+       TargetType="{x:Type RepeatButton}">
+            <Setter Property="SnapsToDevicePixels"
+          Value="True" />
+            <Setter Property="OverridesDefaultStyle"
+          Value="true" />
+            <Setter Property="Focusable"
+          Value="false" />
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                        <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
-                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    <ControlTemplate TargetType="{x:Type RepeatButton}">
+                        <Border x:Name="Border" Background="#393352"
+                Margin="1"
+                CornerRadius="2"
+                BorderThickness="1">
+                            
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="MouseOver" />
+                                    <VisualState x:Name="Pressed">
+                                        <Storyboard>
+                                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Panel.Background).
+                    (GradientBrush.GradientStops)[1].(GradientStop.Color)">
+                                                <EasingColorKeyFrame KeyTime="0"
+                                         Value="{StaticResource ControlPressedColor}" />
+                                            </ColorAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Disabled">
+                                        <Storyboard>
+                                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="Arrow"
+                                                Storyboard.TargetProperty="(Shape.Fill).
+                    (SolidColorBrush.Color)">
+                                                <EasingColorKeyFrame KeyTime="0"
+                                         Value="{StaticResource DisabledForegroundColor}" />
+                                            </ColorAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <Path x:Name="Arrow"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Data="{Binding Content, 
+            RelativeSource={RelativeSource TemplatedParent}}" >
+                                <Path.Fill>
+                                    <SolidColorBrush Color="#743fbf"/>
+                                </Path.Fill>
+                            </Path>
                         </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsSelected" Value="true">
-                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
-                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}"/>
-                            </Trigger>
-                            <MultiTrigger>
-                                <MultiTrigger.Conditions>
-                                    <Condition Property="IsSelected" Value="true"/>
-                                    <Condition Property="Selector.IsSelectionActive" Value="false"/>
-                                </MultiTrigger.Conditions>
-                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
-                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightTextBrushKey}}"/>
-                            </MultiTrigger>
-                            <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-        </Style>-->
+        </Style>
+
+        <Style x:Key="ScrollBarPageButton"
+       TargetType="{x:Type RepeatButton}">
+            <Setter Property="SnapsToDevicePixels"
+          Value="True" />
+            <Setter Property="OverridesDefaultStyle"
+          Value="true" />
+            <Setter Property="IsTabStop"
+          Value="false" />
+            <Setter Property="Focusable"
+          Value="false" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type RepeatButton}">
+                        <Border Background="#393352" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="ScrollBarThumb"
+       TargetType="{x:Type Thumb}">
+            <Setter Property="SnapsToDevicePixels"
+          Value="True" />
+            <Setter Property="OverridesDefaultStyle"
+          Value="true" />
+            <Setter Property="IsTabStop"
+          Value="false" />
+            <Setter Property="Focusable"
+          Value="false" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Thumb}">
+                        <Border CornerRadius="2"
+                Background="{TemplateBinding Background}"
+                BorderBrush="{TemplateBinding BorderBrush}"
+                BorderThickness="1" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <ControlTemplate x:Key="VerticalScrollBar"
+                 TargetType="{x:Type ScrollBar}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition MaxHeight="18" />
+                    <RowDefinition Height="0.00001*" />
+                    <RowDefinition MaxHeight="18" />
+                </Grid.RowDefinitions>
+                <Border Grid.RowSpan="3"
+            CornerRadius="2"
+            Background="#393352" />
+                <RepeatButton Grid.Row="0"
+                  Style="{StaticResource ScrollBarLineButton}"
+                  Height="18"
+                  Command="ScrollBar.LineUpCommand"
+                  Content="M 0 4 L 8 4 L 4 0 Z" />
+                <Track x:Name="PART_Track"
+           Grid.Row="1"
+           IsDirectionReversed="true">
+                    <Track.DecreaseRepeatButton>
+                        <RepeatButton Style="{StaticResource ScrollBarPageButton}"
+                      Command="ScrollBar.PageUpCommand" />
+                    </Track.DecreaseRepeatButton>
+                    <Track.Thumb>
+                        <Thumb BorderBrush="#743fbf" Background="#743fbf" Style="{StaticResource ScrollBarThumb}"
+               Margin="2,0,2,0">
+                            
+                           
+                        </Thumb>
+                    </Track.Thumb>
+                    <Track.IncreaseRepeatButton>
+                        <RepeatButton Style="{StaticResource ScrollBarPageButton}"
+                      Command="ScrollBar.PageDownCommand" />
+                    </Track.IncreaseRepeatButton>
+                </Track>
+                <RepeatButton Grid.Row="2"
+                  Style="{StaticResource ScrollBarLineButton}"
+                  Height="18"
+                  Command="ScrollBar.LineDownCommand"
+                  Content="M 0 0 L 4 4 L 8 0 Z" />
+            </Grid>
+        </ControlTemplate>
+
+        <ControlTemplate x:Key="HorizontalScrollBar"
+                 TargetType="{x:Type ScrollBar}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MaxWidth="18" />
+                    <ColumnDefinition Width="0.00001*" />
+                    <ColumnDefinition MaxWidth="18" />
+                </Grid.ColumnDefinitions>
+                <Border Grid.ColumnSpan="3"
+            CornerRadius="2"
+            Background="#F0F0F0" />
+                <RepeatButton Grid.Column="0"
+                  Style="{StaticResource ScrollBarLineButton}"
+                  Width="18"
+                  Command="ScrollBar.LineLeftCommand"
+                  Content="M 4 0 L 4 8 L 0 4 Z" />
+                <Track x:Name="PART_Track"
+           Grid.Column="1"
+           IsDirectionReversed="False">
+                    <Track.DecreaseRepeatButton>
+                        <RepeatButton Style="{StaticResource ScrollBarPageButton}"
+                      Command="ScrollBar.PageLeftCommand" />
+                    </Track.DecreaseRepeatButton>
+                    <Track.IncreaseRepeatButton>
+                        <RepeatButton Style="{StaticResource ScrollBarPageButton}"
+                      Command="ScrollBar.PageRightCommand" />
+                    </Track.IncreaseRepeatButton>
+                </Track>
+                <RepeatButton Grid.Column="2"
+                  Style="{StaticResource ScrollBarLineButton}"
+                  Width="18"
+                  Command="ScrollBar.LineRightCommand"
+                  Content="M 0 0 L 4 4 L 0 8 Z" />
+            </Grid>
+        </ControlTemplate>
+
+        <Style x:Key="{x:Type ScrollBar}"
+       TargetType="{x:Type ScrollBar}">
+            <Setter Property="SnapsToDevicePixels"
+          Value="True" />
+            <Setter Property="OverridesDefaultStyle"
+          Value="true" />
+            <Style.Triggers>
+                <Trigger Property="Orientation"
+             Value="Horizontal">
+                    <Setter Property="Width"
+              Value="Auto" />
+                    <Setter Property="Height"
+              Value="18" />
+                    <Setter Property="Template"
+              Value="{StaticResource HorizontalScrollBar}" />
+                </Trigger>
+                <Trigger Property="Orientation"
+             Value="Vertical">
+                    <Setter Property="Width"
+              Value="18" />
+                    <Setter Property="Height"
+              Value="Auto" />
+                    <Setter Property="Template"
+              Value="{StaticResource VerticalScrollBar}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+
+
     </Page.Resources>
     <Grid  Background="#262537">
         <Grid.ColumnDefinitions>
@@ -49,50 +246,36 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <components1:BrowseBackButton BackButton="BrowseBackButton_BackButton" Margin="-101,-287,101,287"></components1:BrowseBackButton>
-        <ListBox BorderThickness="1,0,0,0" Grid.Column="1" Name="listdata" Background="Transparent">
+        <ListBox  BorderThickness="1,0,0,0" Grid.Column="1" Name="listdata" Background="Transparent">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <components1:UsersDetail DeleteButton="UsersDetail_DeleteButton" Width="800" Username="{Binding Name}" Email="{Binding Email}" TelephoneNum="{Binding TelNum}" IdValue="{Binding ID}" />
-                    <!--<Border Margin="0,6,0,6" Width="800" Height="150" Background="#393352" CornerRadius="18">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="138*"></ColumnDefinition>
-                                <ColumnDefinition Width="527*"></ColumnDefinition>
-                                <ColumnDefinition Width="135*"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
-                            <Grid Grid.Column="1">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*"/>
-                                    <RowDefinition Height="*"/>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <StackPanel>
-                                    <TextBlock Foreground="#9304D1" Text="ID" FontFamily="Akrobat SemiBold" FontSize="24"/>
-                                    <TextBlock Foreground="White" Text="{Binding ID}" FontFamily="Akrobat SemiBold" FontSize="24"/>
-                                </StackPanel>
-                                <StackPanel Grid.Row="1" Grid.Column="0">
-                                    <TextBlock Foreground="#9304D1" Text="EMAIL" FontFamily="Akrobat SemiBold" FontSize="24"/>
-                                    <TextBlock Foreground="White" Text="{Binding Email}" FontFamily="Akrobat SemiBold" FontSize="24"/>
-                                </StackPanel>
-                                <StackPanel  Grid.Row="0" Grid.Column="1">
-                                    <TextBlock Foreground="#9304D1" Text="NAME" FontFamily="Akrobat SemiBold" FontSize="24"/>
-                                    <TextBlock Foreground="White" Text="{Binding Name}" FontFamily="Akrobat SemiBold" FontSize="24"/>
-                                </StackPanel>
-                                <StackPanel  Grid.Row="1" Grid.Column="1">
-                                    <TextBlock Foreground="#9304D1" Text="TELEPHON NUMBER" FontFamily="Akrobat SemiBold" FontSize="24"/>
-                                    <TextBlock Foreground="White" Text="{Binding TelNum}" FontFamily="Akrobat SemiBold" FontSize="24"/>
-                                </StackPanel>
-                            </Grid>
-                        </Grid>
-                    </Border>-->
+
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
         <components1:PopUpWindow CloseEnv="popwindow_CloseEnv"  Width="450" Height="200"  VerticalAlignment="Center" x:Name="popwindow" Grid.Column="1" >
-
+            
         </components1:PopUpWindow>
     </Grid>
 </Page>
+
+
+<!--<Grid  Background="#262537">
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="400"/>
+        <ColumnDefinition/>
+    </Grid.ColumnDefinitions>
+    <components1:BrowseBackButton BackButton="BrowseBackButton_BackButton" Margin="-101,-287,101,287"></components1:BrowseBackButton>
+    <ListBox BorderThickness="1,0,0,0" Grid.Column="1" Name="listdata" Background="Transparent">
+        <ListBox.ItemTemplate>
+            <DataTemplate>
+                <components1:UsersDetail DeleteButton="UsersDetail_DeleteButton" Width="800" Username="{Binding Name}" Email="{Binding Email}" TelephoneNum="{Binding TelNum}" IdValue="{Binding ID}" />
+
+            </DataTemplate>
+        </ListBox.ItemTemplate>
+    </ListBox>
+    <components1:PopUpWindow CloseEnv="popwindow_CloseEnv"  Width="450" Height="200"  VerticalAlignment="Center" x:Name="popwindow" Grid.Column="1" >
+
+    </components1:PopUpWindow>
+</Grid>-->
