--- a/EE3206_WPF/Components/LandingPageButton.xaml
+++ b/EE3206_WPF/Components/LandingPageButton.xaml
@@ -17,7 +17,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <SolidColorBrush x:Key="Button.Static.Background1" Color="#FFDDDDDD"/>
+        <SolidColorBrush x:Key="Button.Static.Background1" Color="{StaticResource LightVialot}"/>
         <SolidColorBrush x:Key="Button.Static.Border1" Color="White"/>
         <SolidColorBrush x:Key="Button.MouseOver.Background1" Color="#FF6536CB"/>
         <SolidColorBrush x:Key="Button.MouseOver.Border1" Color="Black"/>
@@ -38,7 +38,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border  CornerRadius="20" x:Name="border" Background="#804bf5" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
+                        <Border  CornerRadius="20" x:Name="border" Background="{StaticResource Button.Static.Background1}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
                             <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                         </Border>
                         <ControlTemplate.Triggers>
